--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "url": "git://github.com/MatthewMueller/component-test.git"
   },
   "dependencies": {
-    "commander": "~2.1.0",
-    "express": "~3.4.6",
-    "cheerio": "~0.12.4",
-    "glob": "~3.2.7",
-    "open": "0.0.4"
-  },
-  "devDependencies": {
-    "mocha": "*",
-    "should": "*"
+    "commander": "1.3.2",
+    "express": "3.4.6",
+    "cheerio": "0.12.4",
+    "glob": "3.2.7",
+    "open": "0.0.4",
+    "mocha-phantomjs": "3.1.6",
+    "mocha-cloud": "~0.1.0",
+    "mocha": "1.15.1",
+    "term-canvas": "0.0.5",
+    "mocha-cloud-grid-view": "0.0.1",
+    "localtunnel": "~0.1.3",
+    "osenv": "0.0.3",
+    "optimist": "~0.6.0",
+    "extend.js": "0.0.1"
   },
   "bin": {
     "component-test": "bin/component-test"
