--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "component-test",
-  "version": "0.0.1",
+  "name": "component-test2",
+  "version": "0.0.2",
   "description": "test components locally or with phantom",
   "keywords": [],
   "author": "Matthew Mueller <mattmuelle@gmail.com>",
@@ -18,7 +18,7 @@
     "mocha-cloud": "~0.1.0",
     "mocha": "1.15.1",
     "term-canvas": "0.0.5",
-    "mocha-cloud-grid-view": "0.0.1",
+    "mocha-cloud-grid-view": "jaredhanson/mocha-cloud-grid-view#fix-max-calc",
     "localtunnel": "~0.1.3",
     "osenv": "0.0.3",
     "optimist": "~0.6.0",
