--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "glob": "3.2.7",
     "open": "0.0.4",
     "mocha-phantomjs": "3.1.6",
-    "mocha-cloud": "~0.1.0",
+    "mocha-cloud": "defunctzombie/mocha-cloud",
     "mocha": "1.15.1",
     "term-canvas": "0.0.5",
     "mocha-cloud-grid-view": "jaredhanson/mocha-cloud-grid-view#fix-max-calc",
     "localtunnel": "~0.1.3",
     "osenv": "0.0.3",
     "optimist": "~0.6.0",
-    "debug": "~0.7.4"
+    "debug": "~0.7.4",
+    "yamljs": "~0.1.4"
   },
   "bin": {
     "component-test": "bin/component-test"
