--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-test2",
+  "name": "component-test",
   "version": "0.1.2",
   "description": "test components locally or with phantom",
   "keywords": [],
