--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cheerio": "0.12.4",
     "glob": "3.2.7",
     "open": "0.0.4",
-    "mocha-phantomjs": "3.1.6",
+    "mocha-phantomjs": "~3.3.2",
     "mocha-cloud": "MatthewMueller/mocha-cloud#0.1.0",
     "mocha": "1.15.1",
     "localtunnel": "~0.1.3",
