--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "url": "git://github.com/MatthewMueller/component-test.git"
   },
   "dependencies": {
-    "commander": "1.3.2",
-    "express": "3.4.6",
     "cheerio": "0.12.4",
-    "glob": "3.2.7",
-    "open": "0.0.4",
-    "mocha-phantomjs": "~3.3.2",
-    "mocha-cloud": "MatthewMueller/mocha-cloud#0.1.0",
-    "mocha": "1.15.1",
-    "localtunnel": "~0.1.3",
-    "osenv": "0.0.3",
-    "optimist": "~0.6.0",
+    "commander": "1.3.2",
+    "cross-spawn": "^0.1.7",
     "debug": "~0.7.4",
+    "express": "3.4.6",
+    "glob": "3.2.7",
+    "localtunnel": "~0.1.3",
+    "mocha": "1.15.1",
+    "mocha-cloud": "MatthewMueller/mocha-cloud#0.1.0",
+    "mocha-phantomjs": "~3.3.2",
+    "open": "0.0.4",
+    "optimist": "~0.6.0",
+    "osenv": "0.0.3",
     "yamljs": "~0.1.4"
   },
   "bin": {
