--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cheerio": "0.12.4",
     "glob": "3.2.7",
     "open": "0.0.4",
-    "mocha-phantomjs": "~3.3.2",
+    "mocha-phantomjs": "^3.6.0",
     "mocha-cloud2": "0.1.0",
     "mocha": "1.15.1",
     "localtunnel": "~0.1.3",
@@ -22,7 +22,8 @@
     "optimist": "~0.6.0",
     "debug": "~0.7.4",
     "yamljs": "~0.1.4",
-    "cross-spawn": "^0.1.7"
+    "cross-spawn": "^0.1.7",
+    "phantomjs": ">=1.9.1 - 1.9.7-15"
   },
   "bin": {
     "component-test": "bin/component-test"
